HttpGraphTest has been fixed.